# google-service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/logging/: logging.yaml
prisma/: schema.prisma
src/: main.py
src/api/monitoring/: router.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  authorize.py  client.py
src/api/v1/schema/: auth.py  client.py
src/config/: settings_config.py
src/core/: app_factory.py  exceptions.py  lifespan.py  monitoring.py  utils.py
src/db/prisma/: utils.py
src/enums/: auth_type.py
src/google_mcp/: main.py  server.py
src/google_mcp/custom_routes/: monitoring.py
src/google_mcp/tools/: gmail.py
src/middleware/: logging_metric_middleware.py
src/services/: auth_service.py  authorize_service.py  client_service.py  gmail_service.py
